[add] eslint & stylelint + prettier の導入
伴って, 全体的にコードも修正されている

--- a/src/global-styles/global/_mixin.scss
+++ b/src/global-styles/global/_mixin.scss
@@ -6,11 +6,11 @@
 // xl: 〜 デスクトップ
 
 $-breakpoints: (
-  'zero': 0,
-  'sm': 600px,
-  'md': 960px,
-  'lg': 1264px,
-  'xl': 2000px,
+  "zero": 0,
+  "sm": 600px,
+  "md": 960px,
+  "lg": 1264px,
+  "xl": 2000px,
 ) !default;
 
 @mixin mq($from, $to) {
