--- a/src/global-styles/styles/_base.scss
+++ b/src/global-styles/styles/_base.scss
@@ -1,9 +1,9 @@
 @use "../global/" as g;
-@import '~modern-css-reset';
+@import "~modern-css-reset";
 body {
-    color: g.$text-color;
+  color: g.$text-color;
 }
 
 a {
-    color: g.$link-color;
+  color: g.$link-color;
 }
