--- a/src/global-styles/styles/_layout.scss
+++ b/src/global-styles/styles/_layout.scss
@@ -14,6 +14,9 @@
 .l-sidebar-container {
   border-radius: 3px;
   box-shadow: 0 0 0 5px transparentize(g.$white-weak, $amount: 0.3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .l-main-container {
