[add] 記事用スタイルを追加

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -9,7 +9,7 @@ $-footer-height: 150px;
 
 .content {
   min-height: calc(100vh - (#{$-header-height} + #{$-footer-height}));
-  background-color: g.$white-weak;
+  background-color: g.$bg-color;
 }
 
 .footer {
