--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -1,6 +1,7 @@
 @use "sass:color";
 @use "../../global-styles/global/" as g;
 
+// toc
 .toc-wrapper {
   width: 100%;
   border: solid 2px color.scale(g.$black, $lightness: 70%);
