--- a/src/templates/blog-post.module.scss
+++ b/src/templates/blog-post.module.scss
@@ -66,6 +66,7 @@
   p {
     font-size: 1rem;
     line-height: 2.2rem;
+    margin: 15px 0;
   }
   img,
   ul,
@@ -77,7 +78,9 @@
   ul {
     li {
       margin: 5px 0;
-      & > ul {
+      & > p,
+      ul {
+        line-height: 1.5;
         margin: 0;
       }
     }
