--- a/src/components/article-preview.module.scss
+++ b/src/components/article-preview.module.scss
@@ -1,11 +1,12 @@
 @use "@styles/global" as g;
+@use "@styles/styles/_variable" as var;
 
 .article {
   display: grid;
   grid-template: "image description" 1fr;
   grid-template-columns: 250px 1fr;
   height: 250px;
-  width: 100%;
+  width: var.$main-width;
   margin: 10px 0;
 }
 
