--- a/src/global-styles/global/_variable.scss
+++ b/src/global-styles/global/_variable.scss
@@ -11,7 +11,7 @@ $skyblue: #00b0ff !default;
 // color
 $theme-color: color.scale($black, $lightness: 20%) !default;
 $theme-text-color: $white;
-$bg-color: $white-weak;
+$bg-color: $white;
 $text-color: $black !default;
 $link-color: $skyblue !default;
 $success-color: $green !default;
