--- a/src/global-styles/styles/_module.scss
+++ b/src/global-styles/styles/_module.scss
@@ -18,3 +18,14 @@
 .m-section-title {
   font-size: 1.5rem;
 }
+
+.m-card {
+  // neumorphism
+  border-radius: 10px;
+  background: #fafafa;
+  box-shadow: 8px 8px 15px #9e9e9e, -8px -8px 15px #fff;
+  // styles
+  width: 100%;
+  padding: 0 20px;
+  margin: 0 0 40px 0;
+}
