[update] font changed: default => programming font

--- a/src/global-styles/global/_variable.scss
+++ b/src/global-styles/global/_variable.scss
@@ -15,3 +15,5 @@ $bg-color: $white;
 $text-color: $black !default;
 $link-color: $skyblue !default;
 $success-color: $green !default;
+// font
+$code-fonts: "Ricty Diminished", "SourceHanCodeJP-Regular", "Migu 1M" !default;
