[update] update prev & next nav link

--- a/src/templates/blog-post.module.scss
+++ b/src/templates/blog-post.module.scss
@@ -2,10 +2,29 @@
 @use "../global-styles/global/" as g;
 @use "../global-styles/styles/variable" as l;
 .article {
-  // ⇓ コードブロックにて, 折り返す(white-space)のために, 画面幅を明示する必要あり
   width: l.$main-width;
+  // ⇓ コードブロックにて, 折り返す(white-space)のために, 画面幅を明示する必要あり
   @media screen and (max-width: l.$main-width + 2 * l.$page-x-padding) {
     width: calc(100vw - #{l.$page-x-padding} * 2);
+  }
+}
+
+.contentContainer {
+  padding: 10px 20px;
+}
+
+.nav-article-container {
+  display: grid;
+  grid-template: "prev margin next" 1fr;
+  grid-template-columns: 100px 1fr 100px;
+  width: 100%;
+
+  .nav-previous {
+    grid-area: prev;
+  }
+
+  .nav-next {
+    grid-area: next;
   }
 }
 
