--- a/src/global-styles/styles/_module.scss
+++ b/src/global-styles/styles/_module.scss
@@ -20,12 +20,10 @@
 }
 
 .m-card {
-  // neumorphism
-  border-radius: 10px;
-  background: #fafafa;
-  box-shadow: 8px 8px 15px #9e9e9e, -8px -8px 15px #fff;
+  border-radius: 3px;
+  background: g.$white;
+  box-shadow: 0 0 7px 3px color.scale(g.$bg-color, $lightness: -10%);
   // styles
   width: 100%;
-  padding: 0 20px;
-  margin: 0 0 40px 0;
+  margin: 0 0 20px 0;
 }
