--- a/src/global-styles/global/_variable.scss
+++ b/src/global-styles/global/_variable.scss
@@ -16,4 +16,4 @@ $text-color: $black !default;
 $link-color: $skyblue !default;
 $success-color: $green !default;
 // font
-$code-fonts: "Ricty Diminished", "SourceHanCodeJP-Regular", "Migu 1M" !default;
+$code-fonts: "SourceHanCodeJP-Regular", "Migu 1M", "Ricty Diminished" !default;
