--- a/src/components/category-list.module.scss
+++ b/src/components/category-list.module.scss
@@ -1,5 +1,21 @@
+@use "../global-styles/global/" as g;
+
 .category-list {
   list-style: none;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  color: g.$black-weak;
+
+  li + li {
+    margin-top: 10px;
+  }
+
+  .category {
+    margin-left: 20px;
+    font-weight: bold;
+
+    &:hover {
+      color: g.$link-color;
+    }
+  }
 }
