--- a/src/global-styles/styles/_module.scss
+++ b/src/global-styles/styles/_module.scss
@@ -12,18 +12,36 @@
 }
 
 .m-page-title {
-  font-size: 2.2rem;
+  font-size: 1.8rem;
 }
 
 .m-section-title {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .m-card {
   border-radius: 3px;
+  margin: 0 0 20px 0;
+
+  // styles
   background: g.$white;
   box-shadow: 0 0 7px 3px color.scale(g.$bg-color, $lightness: -10%);
-  // styles
-  width: 100%;
-  margin: 0 0 20px 0;
+  overflow: hidden;
+
+  &__title {
+    padding: 5px;
+    background: g.$theme-color;
+    color: g.$theme-text-color;
+    font-size: 1.1rem;
+    font-weight: normal;
+    text-align: center;
+
+    svg {
+      margin-inline-end: 7px;
+    }
+  }
+
+  &__content {
+    padding: 10px;
+  }
 }
