--- a/src/global-styles/styles/_variable.scss
+++ b/src/global-styles/styles/_variable.scss
@@ -4,7 +4,8 @@ $header-height: 150px;
 $footer-height: 150px;
 // content レイアウト
 $main-width: 800px;
+$main-min-width: 600px;
 $sidebar-width: 300px;
-$page-x-padding: 50px;
-$space-between-main-side: 40px;
+$page-x-padding: 20px;
+$space-between-main-side: 30px;
 $smartphone-breakpoint: 500px;
