[update] Searchページの実装

--- a/src/components/organisms/header.module.scss
+++ b/src/components/organisms/header.module.scss
@@ -17,9 +17,11 @@
 
   .headerNavArea {
     grid-area: nav;
+    height: 100%;
   }
 
   .headerSearchArea {
     grid-area: search;
+    height: 100%;
   }
 }
