--- a/src/components/molecules/search.module.scss
+++ b/src/components/molecules/search.module.scss
@@ -1,30 +1,30 @@
+@use "sass:color";
 @use "@styles/global" as g;
 
-$-search-field-height: 30px;
-$-search-field-width: 250px;
+$-input-width: 85%;
 
-.search-field {
-  height: $-search-field-height;
-  width: $-search-field-width;
-  position: relative;
-
-  input {
-    border-radius: 10px;
-    padding: 0 10px;
-  }
+.searchForm {
+  width: 100%;
+  border-bottom: solid 1px g.$black-weak;
+  padding: 0 0 10px 0;
+  margin: 0 0 20px 0;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
-.search-result-list {
-  list-style: none;
-  position: absolute;
-  top: $-search-field-height;
-  left: 0;
-  width: $-search-field-width;
-  background: g.$black;
+.searchInput {
+  width: $-input-width;
+  border: none;
+}
 
-  li {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
+.searchButton {
+  width: 100% - $-input-width;
+  border: none;
+}
+
+.searchForm,
+.searchButton,
+.searchInput {
+  color: g.$black-weak;
+  background: inherit;
 }
