[update] タグの表示を ｢# タグ名｣ に変更

--- a/src/components/atoms/tag.module.scss
+++ b/src/components/atoms/tag.module.scss
@@ -2,7 +2,7 @@
 @use "@styles/global/" as g;
 
 .tag {
-  margin: 5px;
+  margin: 5px 3px;
   padding: 4px 12px;
   // style
   border-radius: 15px;
