--- a/src/components/molecules/navigation.module.scss
+++ b/src/components/molecules/navigation.module.scss
@@ -1,14 +1,18 @@
-.nav-link-list {
+.navLinkList {
   list-style: none;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   height: 100%;
   &:not(:root) {
-    padding: 0 100px;
+    padding: 0 50px;
   }
 
   a[aria-current="page"] {
     font-weight: bold;
   }
+}
+
+.navLink {
+  margin: 0 40px 0 0;
 }
