--- a/src/components/organisms/header.module.scss
+++ b/src/components/organisms/header.module.scss
@@ -1,18 +1,22 @@
+@use "sass:color";
 @use "@styles/global" as g;
+
+$-header-title-width: 250px;
+$-header-nav-min-width: 400px;
+$-header-search-width: 250px;
 
 .header {
   background-color: g.$theme-color;
   color: g.$theme-text-color;
   display: grid;
-  grid-template:
-    "title title" 70%
-    "nav search" 1fr / 1fr 250px;
+  grid-template: "title nav search" 1fr / #{$-header-title-width} 1fr #{$-header-search-width};
 
   .headerTitle {
     grid-area: title;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 0.8rem;
   }
 
   .headerNavArea {
@@ -23,5 +27,103 @@
   .headerSearchArea {
     grid-area: search;
     height: 100%;
+  }
+}
+
+.responsiveHeaderNav,
+.responsiveHeaderSearch {
+  display: none;
+}
+
+@media screen and (max-width: $-header-search-width + $-header-nav-min-width + $-header-search-width) {
+  .headerSearchArea,
+  .headerNavArea {
+    display: none;
+  }
+
+  .header {
+    grid-template: "title r-search r-nav" 1fr / #{$-header-title-width} 1fr 80px;
+  }
+
+  .responsiveHeaderSearch {
+    grid-area: r-search;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+
+  .responsiveHeaderNav {
+    grid-area: r-nav;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+$-button-height: g.$header-height * 0.35;
+$-button-width: $-button-height * 1.3;
+$-button-line-height: $-button-height / 7;
+$-button-inner-height: $-button-height - $-button-line-height;
+
+.menuButton {
+  height: $-button-height;
+  width: $-button-width;
+  padding: 0;
+  position: relative;
+  background: inherit;
+  border: none;
+
+  .menuButtonItem {
+    background: g.$white;
+    height: $-button-line-height;
+    width: $-button-width;
+    position: absolute;
+    &:nth-child(1) {
+      top: 0;
+    }
+
+    &:nth-child(2) {
+      top: $-button-inner-height / 2;
+    }
+
+    &:nth-child(3) {
+      top: $-button-inner-height;
+    }
+  }
+
+  &[aria-expanded="true"] > .menuButtonItem {
+    &:nth-child(1) {
+      top: $-button-inner-height / 2;
+      transform: rotate(45deg);
+    }
+
+    &:nth-child(2) {
+      display: none;
+    }
+
+    &:nth-child(3) {
+      top: $-button-inner-height / 2;
+      transform: rotate(-45deg);
+    }
+  }
+}
+
+.drawerMenu {
+  position: fixed;
+  top: g.$header-height;
+  right: 0;
+  height: calc(100vh - #{g.$header-height});
+  width: 45vw;
+  background: transparentize(g.$theme-color, 0.3);
+  color: g.$theme-text-color;
+
+  &[aria-hidden="true"] {
+    display: none;
+  }
+
+  & > ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
   }
 }
