[update] 記事ページのレイアウトを調整
タグ一覧を下部へ, シェアボタンを追加

--- a/src/components/templates/layout.module.scss
+++ b/src/components/templates/layout.module.scss
@@ -6,7 +6,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  z-index: map.get(g.$z-index-weighs, "lg");
+  z-index: map.get(g.$z-index-weights, "lg");
 }
 
 .contentWrapper {
