--- a/src/global-styles/global/_variable.scss
+++ b/src/global-styles/global/_variable.scss
@@ -21,7 +21,7 @@ $code-fonts: "SourceHanCodeJP-Regular", "Migu 1M", "Ricty Diminished" !default;
 $header-height: 60px !default;
 $footer-height: 150px !default;
 // z-index
-$z-index-weighs: (
+$z-index-weights: (
   "sm": 10,
   "md": 20,
   "lg": 30,
