--- a/src/global-styles/styles/_markdown.scss
+++ b/src/global-styles/styles/_markdown.scss
@@ -29,7 +29,7 @@ $-code-block-y-margin: 20px;
   position: absolute;
   top: 17px;
   right: 15px;
-  z-index: map.get(g.$z-index-weighs, "sm");
+  z-index: map.get(g.$z-index-weights, "sm");
   &::after {
     // 謎の hover エフェクトがあるので, 上書き
     display: none !important;
@@ -75,7 +75,7 @@ $-copy-toaster-height: 100px;
   position: fixed;
   top: calc(50vh - #{$-copy-toaster-height} / 2);
   left: 0;
-  z-index: map.get(g.$z-index-weighs, "infty");
+  z-index: map.get(g.$z-index-weights, "infty");
   height: $-copy-toaster-height;
   width: 100%;
   // inner layout
