--- a/src/components/organisms/toc.module.scss
+++ b/src/components/organisms/toc.module.scss
@@ -13,10 +13,11 @@
   color: g.$black-weak;
   li {
     margin: 5px 0;
+    padding: 0 10px;
     a {
       text-decoration: none;
       color: inherit;
-      padding: 5px 10px;
+      padding: 5px 0;
       border-radius: 5px;
 
       &:hover {
