[add] Animate.css の追加
同時に不要CSS除去のため, purge-css を追加した

--- a/src/global-styles/styles/_base.scss
+++ b/src/global-styles/styles/_base.scss
@@ -1,6 +1,7 @@
 @use "sass:color";
 @use "../global/" as g;
 @import "~modern-css-reset";
+@import "~animate.css";
 
 // OSにプログラミングフォントがインストール済みなら読み込む
 @each $font in g.$code-fonts {
