[fix] コードブロックのtsxでインデントが崩れる問題を修正

--- a/src/global-styles/global/_variable.scss
+++ b/src/global-styles/global/_variable.scss
@@ -16,7 +16,8 @@ $text-color: $black !default;
 $link-color: $skyblue !default;
 $success-color: $green !default;
 // font
-$code-fonts: "SourceHanCodeJP-Regular", "Migu 1M", "Ricty Diminished" !default;
+$code-fonts: "Hack Nerd Font", "SourceHanCodeJP-Regular", "Cica", "Migu 1M",
+  "Ricty Diminished" !default;
 // layout
 $header-height: 60px !default;
 $footer-height: 150px !default;
