--- a/src/components/molecules/navigation.module.scss
+++ b/src/components/molecules/navigation.module.scss
@@ -4,9 +4,6 @@
   justify-content: flex-end;
   align-items: center;
   height: 100%;
-  &:not(:root) {
-    padding: 0 50px;
-  }
 
   a[aria-current="page"] {
     font-weight: bold;
@@ -14,5 +11,5 @@
 }
 
 .navLink {
-  margin: 0 40px 0 0;
+  margin: 0 0 0 40px;
 }
