--- a/src/components/organisms/header.module.scss
+++ b/src/components/organisms/header.module.scss
@@ -3,60 +3,50 @@
 
 $-header-title-width: 250px;
 $-header-nav-min-width: 400px;
-$-header-search-width: 250px;
 
 .header {
   background-color: g.$theme-color;
   color: g.$theme-text-color;
-  display: grid;
-  grid-template: "title nav search" 1fr / #{$-header-title-width} 1fr #{$-header-search-width};
+  display: flex;
+  padding: 0 30px;
 
   .headerTitle {
     grid-area: title;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     font-size: 0.8rem;
+    width: $-header-title-width;
   }
 
   .headerNavArea {
     grid-area: nav;
-    height: 100%;
-  }
-
-  .headerSearchArea {
-    grid-area: search;
-    height: 100%;
-  }
-}
-
-.responsiveHeaderNav,
-.responsiveHeaderSearch {
-  display: none;
-}
-
-@media screen and (max-width: $-header-search-width + $-header-nav-min-width + $-header-search-width) {
-  .headerSearchArea,
-  .headerNavArea {
-    display: none;
-  }
-
-  .header {
-    grid-template: "title r-search r-nav" 1fr / #{$-header-title-width} 1fr 80px;
-  }
-
-  .responsiveHeaderSearch {
-    grid-area: r-search;
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    width: 100%;
+  }
+}
+
+.responsiveHeaderNav {
+  display: none;
+}
+
+@media screen and (max-width: $-header-title-width + $-header-nav-min-width) {
+  .header {
+    padding: 0 20px;
+  }
+
+  .headerNavArea.headerNavArea {
+    display: none;
   }
 
   .responsiveHeaderNav {
     grid-area: r-nav;
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
+    width: calc(100% - #{$-header-title-width});
   }
 }
 
@@ -72,6 +62,7 @@ $-button-inner-height: $-button-height - $-button-line-height;
   position: relative;
   background: inherit;
   border: none;
+  outline: none;
 
   .menuButtonItem {
     background: g.$white;
@@ -125,5 +116,13 @@ $-button-inner-height: $-button-height - $-button-line-height;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+
+    li {
+      padding: 3px 0;
+    }
+
+    a {
+      margin: 0;
+    }
   }
 }
