[update] Blog Topに検索バーを追加した

--- a/src/components/molecules/search.module.scss
+++ b/src/components/molecules/search.module.scss
@@ -29,3 +29,8 @@ $-input-width: 85%;
   color: g.$black-weak;
   background: inherit;
 }
+
+.tagFilterDropdown {
+  outline: none;
+  cursor: pointer;
+}
