--- a/src/global-styles/styles/_module.scss
+++ b/src/global-styles/styles/_module.scss
@@ -58,8 +58,8 @@
   padding: 4px 12px;
   // style
   border-radius: 15px;
-  background-color: g.$theme-color;
-  color: g.$theme-text-color;
+  background-color: g.$black-weak;
+  color: g.$white;
   font-size: 0.8rem;
   // animation
   transition: 300ms ease;
@@ -67,6 +67,7 @@
 
 .m-tag-link {
   &:hover .m-tag {
+    color: g.$white;
     background-color: g.$link-color;
   }
 }
