--- a/src/global-styles/styles/_base.scss
+++ b/src/global-styles/styles/_base.scss
@@ -2,6 +2,7 @@
 @use "../global/" as g;
 @import "~modern-css-reset";
 @import "~animate.css";
+@import "swiper/swiper.scss";
 
 // OSにプログラミングフォントがインストール済みなら読み込む
 @each $font in g.$code-fonts {
