[update] テーマ色を変更(灰色 => 青)

--- a/src/components/organisms/footer.module.scss
+++ b/src/components/organisms/footer.module.scss
@@ -1,7 +1,7 @@
 @use "@styles/global" as g;
 
 .footer {
-  background-color: g.$theme-color;
+  background-color: g.$black-weak;
   color: g.$theme-text-color;
   display: flex;
   justify-content: center;
