[update] workページの実装

--- a/src/components/molecules/article-preview.module.scss
+++ b/src/components/molecules/article-preview.module.scss
@@ -43,7 +43,7 @@ $-image-width: 250px;
   }
 }
 
-.info-container {
+.infoContainer {
   grid-area: description;
   width: 100%;
   padding: 10px 10px;
