--- a/src/global-styles/styles/_markdown.scss
+++ b/src/global-styles/styles/_markdown.scss
@@ -4,6 +4,128 @@
 @import "~prismjs/themes/prism-okaidia";
 @import "~prismjs/plugins/line-numbers/prism-line-numbers.css";
 
+// article
+.m-article-body {
+  h2 {
+    font-size: 1.5rem;
+    line-height: 3.5rem;
+    padding: 0 0.5rem;
+    margin: 1.8rem 0;
+    border-block-end: solid 2px g.$black-thin;
+  }
+  h3 {
+    font-size: 1.3rem;
+    line-height: 2.5rem;
+    margin: 1.5rem 0;
+    padding: 0 0 0 0.8rem;
+    border-inline-start: solid 8px g.$theme-color;
+    box-shadow: 0 0 0 color.scale(g.$bg-color, $lightness: -30%);
+  }
+  h4 {
+    font-size: 1.3rem;
+    line-height: 1.8rem;
+    margin: 1.2rem 0;
+  }
+  // anchor link の無効化
+  h2,
+  h3 {
+    a[class="anchor before"] {
+      display: none;
+    }
+  }
+  a {
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 0%;
+      z-index: map.get(g.$z-index-weights, "sm");
+      background-color: g.$link-color;
+      opacity: 0.2;
+      transition: 0.2s;
+    }
+    &:hover {
+      &::before {
+        width: 100%;
+      }
+    }
+
+    img {
+      z-index: map.get(g.$z-index-weights, "md");
+    }
+  }
+  p {
+    font-size: 1rem;
+    line-height: 2.2rem;
+    margin: 15px 0;
+  }
+  img,
+  ul,
+  ol,
+  table,
+  blockquote {
+    margin: 25px 5px;
+  }
+  ul {
+    li {
+      margin: 5px 0;
+      & > p,
+      ul {
+        line-height: 1.5;
+        margin: 0;
+      }
+    }
+  }
+  table {
+    border-collapse: collapse;
+    box-shadow: 0 0 8px 1px g.$black-thin;
+    th,
+    td {
+      border: solid 1px g.$black-thin;
+      padding: 0.5rem 1rem;
+      font-weight: 400;
+    }
+    th {
+      background-color: g.$theme-color;
+      color: g.$theme-text-color;
+    }
+  }
+  blockquote {
+    $-quote-color: color.scale(g.$text-color, $lightness: 50%);
+
+    border-inline-start: solid 4px color.scale($-quote-color, $lightness: 45%);
+    margin: 1rem 0;
+    p {
+      margin: 0 0 0 1.2rem;
+      line-height: 2rem;
+      color: $-quote-color;
+    }
+  }
+  // for `example`
+  :not(pre) > code {
+    background-color: g.$white-weak;
+    height: 100%;
+    padding: 0.2rem 0.4rem;
+    border-radius: 3px;
+  }
+  hr {
+    display: block;
+    background-color: g.$black-thin;
+    height: 2px;
+    border: none;
+    margin: 1.2rem 0;
+  }
+  .anchor {
+    &,
+    &:hover {
+      display: none !important;
+    }
+  }
+}
+
 // prismjs
 // [WARN] ピクセル数は, prismjs.css からもらってきてるものもあるので変更には注意
 $-code-block-y-margin: 20px;
