[update] スタイルを更新
記事一覧で見なそうなので記事詳細を削除、BIOと見出しのスタイルを更新、コードブロックのスタイルを調整

--- a/src/global-styles/styles/_markdown.scss
+++ b/src/global-styles/styles/_markdown.scss
@@ -204,6 +204,7 @@ pre[class*="language-"] {
   code {
     font-family: g.$code-fonts, monospace !important;
     font-size: $-code-font-size !important;
+    font-weight: 100;
   }
 }
 
