--- a/src/global-styles/styles/_markdown.scss
+++ b/src/global-styles/styles/_markdown.scss
@@ -8,16 +8,16 @@
 .m-article-body {
   h2 {
     font-size: 1.5rem;
-    line-height: 3.5rem;
-    padding: 0 0.5rem;
+    line-height: 2rem;
+    padding: 1rem 0.5rem;
     margin: 1.8rem 0;
     border-block-end: solid 2px g.$black-thin;
   }
   h3 {
     font-size: 1.3rem;
-    line-height: 2.5rem;
+    line-height: 1.8rem;
     margin: 1.5rem 0;
-    padding: 0 0 0 0.8rem;
+    padding: 0.5rem 0 0.5rem 0.8rem;
     border-inline-start: solid 8px g.$theme-color;
     box-shadow: 0 0 0 color.scale(g.$bg-color, $lightness: -30%);
   }
