--- a/src/global-styles/styles/_markdown.scss
+++ b/src/global-styles/styles/_markdown.scss
@@ -69,11 +69,13 @@
   blockquote {
     margin: 25px 5px;
   }
-  ul {
+  ul,
+  ol {
     li {
       margin: 5px 0;
       & > p,
-      ul {
+      ul,
+      ol {
         line-height: 1.5;
         margin: 0;
       }
