[fix] gif画像にぼかしfilterがかかってしまう問題を解消した

--- a/src/global-styles/styles/_markdown.scss
+++ b/src/global-styles/styles/_markdown.scss
@@ -95,6 +95,9 @@
       color: g.$theme-text-color;
     }
   }
+  img[src*="gif"] {
+    filter: none;
+  }
   blockquote {
     $-quote-color: color.scale(g.$text-color, $lightness: 50%);
 
