[update] テーマを更新(ダークにした) #21
伴って軽くリファクタした

--- a/src/components/atoms/code.module.scss
+++ b/src/components/atoms/code.module.scss
@@ -24,7 +24,7 @@ $-code-title-height: 25px;
   height: $-code-title-height;
   border-radius: 0 0 5px 5px;
   background: g.$theme-color;
-  color: g.$theme-text-color;
+  color: g.$text-color;
   font-size: 0.8rem;
 }
 
