--- a/src/components/molecules/category-list.module.scss
+++ b/src/components/molecules/category-list.module.scss
@@ -4,7 +4,7 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  color: g.$black-weak;
+  color: g.$text-color;
 
   li + li {
     margin-top: 10px;
