--- a/src/templates/blog-post.module.scss
+++ b/src/templates/blog-post.module.scss
@@ -13,7 +13,7 @@
 
 .sepLine {
   display: block;
-  background-color: g.$black-thin;
+  background-color: g.$theme-reverse-color;
   height: 2px;
   border: none;
   margin: 1.2rem 5px;
