--- a/src/components/organisms/toc.module.scss
+++ b/src/components/organisms/toc.module.scss
@@ -10,18 +10,18 @@
   overflow-y: scroll;
   list-style: none;
   font-size: 0.9rem;
-  color: g.$black-weak;
   li {
     margin: 5px 0;
     padding: 0 10px;
     a {
       text-decoration: none;
       color: inherit;
-      padding: 5px 0;
-      border-radius: 5px;
+      padding: 7px 5px;
+      border-radius: 2px;
+      box-decoration-break: clone;
 
       &:hover {
-        background-color: color.scale(g.$black-weak, $lightness: 70%);
+        background: g.$theme-strong-color;
         transition: 0.5s;
       }
     }
