[refactor] 記事展開部分を Post コンポーネントに共通化した (#23)

--- a/src/components/templates/post.module.scss
+++ b/src/components/templates/post.module.scss
@@ -1,7 +1,6 @@
 @use "sass:color";
 @use "sass:map";
-@use "../global-styles/global/" as g;
-@use "../global-styles/styles/variable" as l;
+@use "@styles/global" as g;
 
 .contentContainer {
   padding: 10px 20px;
